--- a/Project.toml
+++ b/Project.toml
@@ -51,7 +51,7 @@ FastClosures = "0.3"
 FiniteDiff = "2"
 ForwardDiff = "0.10.3"
 FunctionWrappersWrappers = "0.1"
-LinearSolve = "1.9.0"
+LinearSolve = "1.9.0, 2"
 LoopVectorization = "0.12"
 MacroTools = "0.5"
 MuladdMacro = "0.2.1"
