--- a/Project.toml
+++ b/Project.toml
@@ -60,7 +60,7 @@ NonlinearSolve = "0.3.14"
 Polyester = "0.3, 0.4, 0.5, 0.6"
 PreallocationTools = "0.2, 0.3, 0.4"
 Preferences = "1.3"
-RecursiveArrayTools = "2.26.3"
+RecursiveArrayTools = "2.26.3, 3"
 Reexport = "0.2, 1.0"
 SciMLBase = "1.53"
 SnoopPrecompile = "1"
