--- a/Project.toml
+++ b/Project.toml
@@ -38,7 +38,7 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 
 [compat]
-Adapt = "1.1, 2.0, 3.0"
+Adapt = "1.1, 2.0, 3.0, 4"
 ArrayInterface = "6"
 ArrayInterfaceGPUArrays = "0.1, 0.2"
 ArrayInterfaceStaticArrays = "0.1"
