CompatHelper: bump compat for FastBroadcast to 0.3, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -46,7 +46,7 @@ DataStructures = "0.18"
 DiffEqBase = "6.99.0"
 DocStringExtensions = "0.8, 0.9"
 ExponentialUtilities = "1.2"
-FastBroadcast = "0.1.9, 0.2"
+FastBroadcast = "0.1.9, 0.2, 0.3"
 FastClosures = "0.3"
 FiniteDiff = "2"
 ForwardDiff = "0.10.3"
