CompatHelper: add new compat entry for OrdinaryDiffEq at version 6 for package downstream, (keep existing compat)

--- a/test/downstream/Project.toml
+++ b/test/downstream/Project.toml
@@ -12,6 +12,7 @@ Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 DDEProblemLibrary = "0.1"
 DelayDiffEq = "5.42"
 Measurements = "2.9"
+OrdinaryDiffEq = "6"
 SciMLSensitivity = "7.30"
 StaticArrays = "1"
 StochasticDiffEq = "6.60.1"
